--- a/styles/reset.css
+++ b/styles/reset.css
@@ -123,9 +123,15 @@ button {
 .my-container {
     max-width: 1280px;
     margin: 0 auto;
-    padding: 0px 30px;
+    padding: 0px 40px;
     box-sizing: content-box;
     background-color: #FFF;
+}
+
+@media (max-width: 769px) {
+    .my-container {
+        padding: 0px 30px;
+    }
 }
 
 .main {
