--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -14,6 +14,9 @@
 .header__mobile {
     display: none;
 }
+.header__mobile.--no-sectionsLinks .header__mobile-section-links {
+    display: none;
+}
 .header__left {
 }
 .header__logo-link {
